<resources>
    <string name="app_name">船掌通</string>
    <string name="junhang">君航</string>
    <string name="ship_position">船位</string>
    <string name="message">航运钉钉</string>
    <string name="news">航运头条</string>
    <string name="my">我的</string>
    <string name="chuanduigunali">我的船队</string>
    <string name="ceju">测距</string>
    <string name="chuandui">船队</string>
    <string name="chuanyuanguanli">船员管理</string>
    <string name="account_setting">设置</string>
    <string name="user_name">姓名</string>
    <string name="duty">职务</string>
    <string name="role">角色</string>
    <string name="label">标签</string>
    <string name="gender">性别</string>
    <string name="contact_number">联系电话</string>
    <string name="change_phone_num">更换手机号</string>
    <string name="emergency_contactor">紧急联络人</string>
    <string name="emergency_contactor_phone">紧急联络人电话</string>
    <string name="chuanguan">船管</string>
    <string name="messager">管理员</string>
    <string name="chuanyuan">船员</string>
    <string name="other">其他</string>
    <string name="contact_phone">110</string>
    <string name="personal_info">个人信息</string>
    <string name="my_fleet">我的船队</string>
    <string name="follow_fleet">我关注的船列表</string>
    <string name="follow_fleets">关注的船</string>
    <string name="secret">*密码</string>
    <string name="secret_no_star">输入密码</string>
    <string name="conform_secret">确认密码</string>
    <string name="phone_number">*手机号</string>
    <string name="no_get_cur_phone">没有获取到当前号码</string>
    <string name="mail_box">邮箱</string>
    <string name="mail_box_colon">邮箱:</string>
    <string name="mail_box_demo">chuanguan@chuanzhangtong.com</string>
    <string name="we_chat">微信</string>
    <string name="weibo">微博</string>
    <string name="QQ">QQ</string>
    <string name="clear_buffer">清除缓冲</string>
    <string name="clear_buffer_demo">3KB</string>
    <string name="flag_mean">标记含义</string>
    <string name="about">关于船掌通</string>
    <string name="set_sail_remind">起航提醒</string>
    <string name="is_login_out">确定要退出登录吗？</string>
    <string name="login_out">退出登录</string>
    <string name="reset_pwd">重置密码</string>
    <string name="no_bind">未绑定</string>
    <string name="no_setting">未设置</string>
    <string name="warm">提示</string>
    <string name="login_register">登录/注册</string>
    <string name="identity">身份</string>
    <string name="shanghai">上海</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input">请输入</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="two_pwd_not_equal">两次密码输入不一致</string>
    <string name="verify_message">短信验证登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="add_first_ship">亲，请添加您的第一条船哦~</string>
    <string name="follow_first_ship">亲，请关注您的第一条船哦~</string>
    <string name="add_first_certificate">亲，请添加您的第一张证书哦~</string>
    <string name="add_first_crew">亲，请添加您的船员哦~</string>
    <string name="register">注册</string>
    <string name="free_register">免费注册</string>
    <string name="login_other">其他登录方式</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="input_name">请输入姓名</string>
    <string name="name">姓名</string>
    <string name="insurance_demo">油污损害民事责任保险或其他财务保证证书</string>
    <string name="save">保存</string>
    <string name="immediately_add">立即添加</string>
    <string name="immediately_follow">立即关注</string>
    <string name="complete">完成</string>
    <string name="MMIS_number">MMSI编号</string>
    <string name="MMSI">MMSI</string>
    <string name="MMSI_withColon">MMSI:</string>
    <string name="call_sign">呼号</string>
    <string name="call_sign_with_colon">呼号:</string>
    <string name="AIS_ship_name">AIS船名</string>
    <string name="chinese_ship_name">中文船名</string>
    <string name="fleet_group">船队分组</string>
    <string name="fleet_manage">船队管理</string>
    <string name="contact_mail_box">联系邮箱</string>
    <string name="requred_input">必填</string>
    <string name="optional_input">选填</string>
    <string name="choose_group">选择分组</string>
    <string name="add_ship">添加船舶</string>
    <string name="add_crew">添加船员</string>
    <string name="crew_info_input">信息录入</string>
    <string name="ID">身份证</string>
    <string name="nationality">国际</string>
    <string name="nationalities">国籍</string>
    <string name="crew_belong_ship">所在船舶</string>
    <string name="job_num">工号</string>
    <string name="job_num_demo">012</string>
    <string name="phone">手机号</string>
    <string name="input_ID">请输入身份证</string>
    <string name="input_certificate_num">请输入证件号</string>
    <string name="input_job_num">请输入工号</string>
    <string name="input_ship_name">请输入船名</string>
    <string name="choose_duty">请选择职务</string>
    <string name="choose_belong_ship">请选择所在船舶</string>
    <string name="input_mail_box">请输入邮箱</string>
    <string name="input_emergency_contactor">请输入紧急联系人</string>
    <string name="input_emergency_contactor_phone">请输入紧急联系人电话</string>
    <string name="nationality_china">中国</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="input_pwd_first">请输入密码</string>
    <string name="input_pwd_agian">请再次输入密码</string>
    <string name="about_version">船掌通 Version 1.0.0</string>
    <string name="score">去评分</string>
    <string name="version_info">版本信息</string>
    <string name="check_updata">检查更新</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_hint">输入遇到的问题或者建议</string>
    <string name="max_length_400">400以内</string>
    <string name="phone_requested">手机（选填）:</string>
    <string name="mail_box_requested">邮箱（必填）:</string>
    <string name="mail_box_requested_hint">方便我们联系您</string>
    <string name="no_empty">不能为空</string>
    <string name="commit">提交</string>
    <string name="ok">确定</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="clear_buffer_title">确定要清除缓存</string>
    <string name="clear_buffer_message">程序会定期清除过期的缓存，\n如果手动清除会造成不必要的流量</string>
    <string name="pwd_login">密码登录</string>
    <string name="registered">已有账号？去</string>
    <string name="next">下一步</string>
    <string name="certificate_name">证书名称</string>
    <string name="certificate_list">证书列表</string>
    <string name="certificate_number">证书编号</string>
    <string name="certificate_number_colon">证书编号:</string>
    <string name="input_certificate_number">输入证书编号</string>
    <string name="certificate_type">证书类型</string>
    <string name="certificates_type">证件类型</string>
    <string name="input_certificates_type">输入证件类型</string>
    <string name="certificate_type_colon">证书类型：</string>
    <string name="type">类型</string>
    <string name="type_with_colon">类型:</string>
    <string name="issuing_authority">签发机构</string>
    <string name="issuing_authority_colon">签发机构：</string>
    <string name="end_date">到期日期</string>
    <string name="end_date_format">格式:20170714</string>
    <string name="permanent_effective">永久有效</string>
    <string name="re_warning_days">预警天数</string>
    <string name="is_common">是否常用</string>
    <string name="photo_num_inner_six">您最多能选六张照片</string>
    <string name="photo_num_inner_three">您最多能选三张照片</string>
    <string name="commoned">常用</string>
    <string name="no_commoned">不常用</string>
    <string name="add_certificate_photo">添加照片</string>
    <string name="time_30_days">30天</string>
    <string name="time_90_days">90天</string>
    <string name="add">添加</string>
    <string name="bind_manage_mail">绑定管理邮箱</string>
    <string name="bind_manage_mail_warn">* 请输入您与船舶进行管理通讯的唯一指定邮箱\n提供邮箱服务器信息会将船舶报文集成进平台，对船舶的航行状态一目了然。</string>
    <string name="bind_box_server">绑定邮箱服务器</string>
    <string name="no_bind_temp">暂不绑定</string>
    <string name="bind_account_pwd">账户密码</string>
    <string name="pwd_colon">密码:</string>
    <string name="bind_confirm">确认绑定</string>
    <string name="server_info">服务器信息</string>
    <string name="how_to_setting">如何设置？</string>
    <string name="account_type">账户类型:</string>
    <string name="account_type_demo">IMAP</string>
    <string name="acceot_mail_server">接受邮件服务器:</string>
    <string name="send_mail_server">发送邮件服务器:</string>
    <string name="server_demo">www.junhang.com</string>
    <string name="login_info">登录信息</string>
    <string name="test_account_setting">测试账户设置</string>
    <string name="huahai_one">华海一号</string>
    <string name="add_ships">添加</string>
    <string name="add_crews">添船员</string>
    <string name="edit">编辑</string>
    <string name="ship_certificate_lists">船舶证书</string>
    <string name="certificate_photo">证书图片</string>
    <string name="choose_all">全选</string>
    <string name="delete">删除</string>
    <string name="delete_success">成功删除</string>
    <string name="is_delete">是否删除？</string>
    <string name="send_photo">发照片</string>
    <string name="cancel_choose_all">取消全选</string>
    <string name="sea_map">海图</string>
    <string name="land_map">地图</string>
    <string name="satellite_map">卫星图</string>
    <string name="search_hint">请输入船号/呼号/MMSI/IMO进行搜索</string>
    <string name="search_ship_name">搜索船名</string>
    <string name="search">搜索</string>
    <string name="no_longin">请先登录</string>
    <string name="MMIS_cannot_empty">MMSI编号不能为空</string>
    <string name="chinese_name_cannot_empty">中文船名不能为空</string>
    <string name="contact_mail_cannot_empty">联系邮箱不能为空</string>
    <string name="certificate_name_cannot_empty">证书名称不能为空</string>
    <string name="certificate_num_cannot_empty">证书编号不能为空</string>
    <string name="certificate_type_cannot_empty">证书类型不能为空</string>
    <string name="certificate_issuing_authory_cannot_empty">证书签发机构不能为空</string>
    <string name="crew_name_cannot_empty">船员姓名不能为空</string>
    <string name="crew_ID_cannot_empty">船员身份证不能为空</string>
    <string name="crew_job_num_cannot_empty">船员工号不能为空</string>
    <string name="latitude">纬度</string>
    <string name="longitude">经度</string>
    <string name="ship_direction">航向</string>
    <string name="current_ship_speed">当前航速</string>
    <string name="the_ship_heavy_oil">船存重油</string>
    <string name="ship_draft">船艏吃水</string>
    <string name="the_ship_light_oil">船存轻油</string>
    <string name="the_ship_frashwater">船存淡水</string>
    <string name="light_oil_consume">轻油消耗</string>
    <string name="frashwater_consume">淡水消耗</string>
    <string name="average_speed_between_24_hours">前24小时之内平均速度</string>
    <string name="re_arrival_time">预抵港时间</string>
    <string name="pressure">气压</string>
    <string name="pitch">螺距</string>
    <string name="temperature">温度</string>
    <string name="weather">天气</string>
    <string name="wave_level">浪级</string>
    <string name="wind_direction">风向</string>
    <string name="consume">消耗</string>
    <string name="remark">备注</string>
    <string name="input_latitude">请输入纬度</string>
    <string name="input_longitude">请输入经度</string>
    <string name="input_ship_direction">请输入航向</string>
    <string name="input_ship_speed">请输入航速</string>
    <string name="input_the_ship_heavy_oil">请输入船存重油</string>
    <string name="input_ship_draft">请输入船艏吃水</string>
    <string name="input_the_ship_light_oil">请输入船存轻油</string>
    <string name="input_the_ship_frashwater">请输入船存淡水</string>
    <string name="input_light_oil_consume">请输入轻油消耗</string>
    <string name="input_frashwater_consume">请输入淡水消耗</string>
    <string name="input_average_speed_between_24_hours">请输入平均速度</string>
    <string name="choose_time">请选择时间</string>
    <string name="input_pressure">请输入气压</string>
    <string name="input_pitch">请输入螺距</string>
    <string name="input_temperature">请输入温度</string>
    <string name="input_weather">请输入天气</string>
    <string name="input_wave_level">请输入浪级</string>
    <string name="input_wind_direction">请输入风向</string>
    <string name="input_consume">请输入消耗内容</string>
    <string name="input_remark">请输入备注</string>
</resources>