<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_man"
        style="@style/pop_text_style"
        android:text="@string/man" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bg" />

    <TextView
        android:id="@+id/tv_woman"
        style="@style/pop_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/woman" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/gray_bg" />

    <TextView
        android:id="@+id/tv_cancel_choose_gender"
        style="@style/pop_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>